removed database and completed endpoints
